# dist_calc

./: .gitignore  Cargo.toml  Makefile  README.md
calculation/src/: lib.rs
files/input/: 5km.csv
src/: lib.rs  main.rs
tests/: unit_tests.rs
